AUI-2093 Fix arrow icons alignment of the resize column handler

--- a/src/aui-layout/assets/aui-layout-builder-resize-col-core.css
+++ b/src/aui-layout/assets/aui-layout-builder-resize-col-core.css
@@ -52,7 +52,7 @@
     border-radius: 100%;
     color: #73bdf3;
     cursor: col-resize;
-    font-size: 9px;
+    font-size: 8px;
     font-weight: 100;
     height: 28px;
     margin-left: -5px;
@@ -68,6 +68,17 @@
     color: #fff;
     display: inline-block;
     float: left;
+    position: absolute;
+}
+
+.layout-builder-resize-col-draggable-handle .glyphicon-chevron-left {
+    left: 4px;
+    top: 10.3px
+}
+
+.layout-builder-resize-col-draggable-handle .glyphicon-chevron-right {
+    top: 10px;
+    right: 5px;
 }
 
 .layout-builder-resize-col-dragging.layout-row {
